fixed navigation content and size

--- a/patient/index.html
+++ b/patient/index.html
@@ -21,10 +21,10 @@
 		<div class="nav__content">
 			<ul class="nav__list">
 				<li class="nav__list-item active-nav"><a href="#" class="hover-target">Home</a></li>
-				<li class="nav__list-item"><a href="#" class="hover-target">Portfolio</a></li>
-				<li class="nav__list-item"><a href="#" class="hover-target">Studio</a></li>
-				<li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
-				<li class="nav__list-item"><a href="#" class="hover-target">Contact</a></li>
+				<li class="nav__list-item"><a href="#" class="hover-target">Book Appointment</a></li>
+				<li class="nav__list-item"><a href="#" class="hover-target">Doctor</a></li>
+				<li class="nav__list-item"><a href="#" class="hover-target">Check Appointment</a></li>
+				<li class="nav__list-item"><a href="#" class="hover-target">Admin</a></li>
 			</ul>
 		</div>
 	</div>		
