change file path for every .html files

--- a/meinhardt-front-end/public/emailverification.html
+++ b/meinhardt-front-end/public/emailverification.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Email Verification</title>
 
 
     <!-- ===============================================-->
@@ -45,7 +45,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-                        <li class="nav-item px-2"><p class="nav-link" aria-current="page" href="#about">Already have an account? Click here!</p></li>
+                        <li class="nav-item px-2"><p class="nav-link" aria-current="page" href="../../patient/login_signup/signPage.html">Already have an account? Click here!</p></li>
                 </div>
             </div>
         </nav>
@@ -60,8 +60,8 @@
 					</div>
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
-                        <p class="fs-1 mb-5">Your password has been changed!</p>
-						<p class="fs-1 mb-5">Please sign in again. </p>
+                        <p class="fs-1 mb-5">Please check your email for verification.</p>
+						<p class="fs-1 mb-5">Do check the spam category if its not in primary.</p>
                         <div class="d-grid">
                         </div>
                     </div>
