--- a/meinhardt-front-end/public/forgotpass.html
+++ b/meinhardt-front-end/public/forgotpass.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Forgotten Password</title>
 
 
     <!-- ===============================================-->
