--- a/patient/login_signup/signPage.html
+++ b/patient/login_signup/signPage.html
@@ -20,7 +20,7 @@
 				<input type="text" placeholder="Name" />
 				<input type="email" placeholder="Email" />
 				<input type="password" placeholder="Password" />
-				<button>Sign Up</button>
+				<button><a href="../../meinhardt-front-end/public/emailverification.html">Sign Up</a></button>
 			</form>
 		</div>
 		<div class="form-container sign-in-container">
@@ -34,8 +34,8 @@
 				<span>or use your account</span>-->
 				<input type="email" placeholder="Email" />
 				<input type="password" placeholder="Password" />
-				<a href="#">Forgot your password?</a>
-				<button>Sign In</button>
+				<a href="../../meinhardt-front-end/public/forgotpass.html">Forgot your password?</a>
+				<button><a href="../../meinhardt-front-end/public/homepagepatient.html">Sign In</a></button>
 			</form>
 		</div>
 		<div class="overlay-container">
