--- a/meinhardt-front-end/public/changepass.html
+++ b/meinhardt-front-end/public/changepass.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Forgotten Password</title>
 
 
     <!-- ===============================================-->
@@ -50,7 +50,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">Sign Up</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign In</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../patient/login_signup/signPage.html">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -72,7 +72,7 @@
                             <input class="form-control form-livedoc-control" id="inputEmail" type="email" placeholder="New Password" />
                         
 							<div class="d-grid">
-                            <button class="btn btn-primary rounded-pill" type="submit">Submit</button>
+                                <a href="../../meinhardt-front-end/public/confirmedchangepass.html"><button class="btn btn-primary rounded-pill" type="submit">Submit</button></a>
                         </div>
 							
                         </div>
