--- a/meinhardt-front-end/public/confirmedchangepass.html
+++ b/meinhardt-front-end/public/confirmedchangepass.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Forgotten Password</title>
 
 
     <!-- ===============================================-->
@@ -50,7 +50,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">Sign Up</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign In</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../patient/login_signup/signPage.html">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -65,8 +65,8 @@
 					</div>
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
-                        <p class="fs-1 mb-5">Email verification has been sent! </p>
-						<p class="fs-1 mb-5">Please check your spam section for safety. </p>
+                        <p class="fs-1 mb-5">Password has been changed successfully! </p>
+                        <p class="fs-1 mb-5">Please sign in again to continue. </p>
                         <div class="d-grid">
                         </div>
                     </div>
