--- a/meinhardt-front-end/public/loginpatients.html
+++ b/meinhardt-front-end/public/loginpatients.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Sign In</title>
 
 
     <!-- ===============================================-->
@@ -77,8 +77,8 @@
                             <input class="form-control form-livedoc-control" id="inputPass" type="pass" placeholder="Password" />
                         </div>
 						
-						<div class="d-grid">
-                            <button class="btn btn-primary rounded-pill" type="submit">Sign in</button>
+                        <div class="d-grid">
+                            <a href="../../meinhardt-front-end/public/homepagepatient.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
                         </div>
 						
 						<a class="fs-1 mb-5" href="#!">Forgot Password </a>
