--- a/meinhardt-front-end/public/logoutpatients.html
+++ b/meinhardt-front-end/public/logoutpatients.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Meinhardt Hospital</title>
 
 
     <!-- ===============================================-->
@@ -47,10 +47,10 @@
                 <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">About Us</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#departments">Departments</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">Sign Up</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="../../patient/login_signup/signPage.html">Sign Up</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign In</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../patient/login_signup/signPage.html">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -65,8 +65,8 @@
 					</div>
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
-                        <p class="fs-1 mb-5">Your email has been verified. </p>
-						<a class="fs-1 mb-5" href="#!">Click here to go proceed to the homepage. </a>
+                        <p class="fs-1 mb-5">You have successfully signed out. </p>
+						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/index.html">Click here to go proceed to the homepage. </a>
                         <div class="d-grid">
                         </div>
                     </div>
