--- a/meinhardt-front-end/public/verifiedemail.html
+++ b/meinhardt-front-end/public/verifiedemail.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Meinhardt Hospital</title>
 
 
     <!-- ===============================================-->
@@ -41,7 +41,7 @@
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
+                <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
@@ -49,7 +49,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
                 </div>
             </div>
         </nav>
@@ -65,7 +65,7 @@
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
                         <p class="fs-1 mb-5">You have successfully signed out! </p>
-						<a class="fs-1 mb-5" href="#!">&nbsp;Click here to go proceed to the homepage. </a>
+						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/homepagepatient.html">Click here to go proceed to the homepage. </a>
                         <div class="d-grid">
                         </div>
                     </div>
