--- a/meinhardt-front-end/public/viewprofilepatient.html
+++ b/meinhardt-front-end/public/viewprofilepatient.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign Up</title>
+    <title>Your Profile</title>
 
 
     <!-- ===============================================-->
@@ -41,7 +41,7 @@
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
+                <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
@@ -49,7 +49,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
                 </div>
             </div>
         </nav>
@@ -68,9 +68,9 @@
 				<br> Address: xxxxx, xxxxx ,xxxxxx ,xxxxx
 				<br> Date Of Birth: xx September 20xx (23 years-old)</p>
 				
-				<div class="d-grid">
-                            <button class="btn btn-primary rounded-pill" type="submit">Update Profile</button>
-                        </div>
+              <div class="d-grid">
+                  <a href="../../meinhardt-front-end/public/updateprofilepatient.html"><button class="btn btn-primary rounded-pill" type="submit">Update Profile</button></a>
+              </div>
             </div>
           </div>
         </div>
