--- a/meinhardt-front-end/public/changepassdoctor.html
+++ b/meinhardt-front-end/public/changepassdoctor.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Meinhardt Hospital</title>
+    <title>Forgotten Password</title>
 
 
     <!-- ===============================================-->
@@ -41,15 +41,12 @@
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container">
-                <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/viewprofilepatient.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
+                 <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/loginadmin.html">Admin Login</a></li>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/loginadmin.html">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -64,8 +61,17 @@
 					</div>
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
-                        <p class="fs-1 mb-5">Your email has been verified! </p>
-						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/homepagepatient.html">Click here to go proceed to the homepage. </a>
+                        <p class="fs-1 mb-5">Please enter your new password. </p>
+						<p class="fs-1 mb-5">New Password: </p>
+                        <div class="col-md-6">
+                            <label class="form-label visually-hidden" for="inputEmail">Email</label>
+                            <input class="form-control form-livedoc-control" id="inputEmail" type="email" placeholder="New Password" />
+                        
+							<div class="d-grid">
+                                <a href="../../meinhardt-front-end/public/confirmedchangepassdoctor.html"><button class="btn btn-primary rounded-pill" type="submit">Submit</button></a>
+                        </div>
+							
+                        </div>
                         <div class="d-grid">
                         </div>
                     </div>
