--- a/meinhardt-front-end/public/loginpatients.html
+++ b/meinhardt-front-end/public/loginpatients.html
@@ -50,7 +50,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">Sign Up</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign In</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/loginpatients.html">Sign In</a>
                 </div>
             </div>
         </nav>
