--- a/meinhardt-front-end/public/verifiedemailadmin.html
+++ b/meinhardt-front-end/public/verifiedemailadmin.html
@@ -44,12 +44,12 @@
                 <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
+                <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/viewprofilepatient.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#departments">Appointments</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutadmin.html">Sign Out</a>
                 </div>
             </div>
         </nav>
