--- a/meinhardt-front-end/public/viewprofiledoctor.html
+++ b/meinhardt-front-end/public/viewprofiledoctor.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Meinhardt Hospital</title>
+    <title>Your Profile</title>
 
 
     <!-- ===============================================-->
@@ -44,12 +44,12 @@
                 <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
+                <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/viewprofilepatient.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#departments">Appointments</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutdoctor.html">Sign Out</a>
                 </div>
             </div>
         </nav>
@@ -60,17 +60,21 @@
 
             <div class="container">
                 <div class="row min-vh-xl-100 min-vh-xxl-25">
-                    <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
-					</div>
-                    <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-
-                        <p class="fs-1 mb-5">Your email has been verified! </p>
-						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/homepagepatient.html">Click here to go proceed to the homepage. </a>
-                        <div class="d-grid">
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
+            <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
+              <h1 class="fw-light font-base fs-6 fs-xxl-7">DAMIAN PIRI</h1>
+              <p class="fs-1 mb-5">Contact Number: +601 xxx xxx
+				<br> E-Mail: xxxxxxx@gmail.com
+				<br> Address: xxxxx, xxxxx ,xxxxxx ,xxxxx
+				<br> Date Of Birth: xx September 20xx (23 years-old)
+				<br> Deparment Of Neurology</p>
+				
+              <div class="d-grid">
+                  <a href="../../meinhardt-front-end/public/updateprofilepatient.html"><button class="btn btn-primary rounded-pill" type="submit">Update Profile</button></a>
+              </div>
             </div>
+          </div>
+        </div>
 			</section>
         <section class="py-0 bg-secondary">
             <div class="bg-holder opacity-25" style="background-image:url(assets/img/gallery/dot-bg.png);background-position:top left;margin-top:-3.125rem;background-size:auto;">
