Added appointment page for patient

--- a/meinhardt-front-end/public/homepagepatient.html
+++ b/meinhardt-front-end/public/homepagepatient.html
@@ -45,7 +45,7 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/viewprofilepatient.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
