--- a/meinhardt-front-end/public/viewprofilepatient.html
+++ b/meinhardt-front-end/public/viewprofilepatient.html
@@ -46,7 +46,7 @@
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Book Appointment</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
