--- a/meinhardt-front-end/public/appointmentbookpatient.html
+++ b/meinhardt-front-end/public/appointmentbookpatient.html
@@ -62,7 +62,7 @@
                 <div class="row min-vh-xl-100 min-vh-xxl-25">
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <h1 class="fw-light font-base fs-6 fs-xxl-7">Appointment book for Mr. Piri</h1>
+              <h1 class="fw-light font-base fs-6 fs-xxl-7">Appointment book</h1>
               <p class="fs-1 mb-5">Contact Number: </p>
                         <div class="col-md-6">
                             <label class="form-label visually-hidden" for="inputEmail">Email</label>
