--- a/patient_website/public/homepagepatient.html
+++ b/patient_website/public/homepagepatient.html
@@ -48,7 +48,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./SignOut.php">Sign Out</a>
           </div>
         </div>
       </nav>
