--- a/patient_website/public/viewprofilepatient.html
+++ b/patient_website/public/viewprofilepatient.html
@@ -52,7 +52,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
 			  
 			  
-           </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./"> Sign Out</a>
+           </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href=""> Sign Out</a>
                 </div>
             </div>
      </nav>
