--- a/patient_website/public/logoutpatients.html
+++ b/patient_website/public/logoutpatients.html
@@ -47,10 +47,10 @@
                 <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">About Us</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#departments">Departments</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="./signPage.html">Sign Up</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="./login_signup/signPage.html">Sign Up</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./signPage.html">Sign In</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./login_signup/signPage.html">Sign In</a>
                 </div>
             </div>
         </nav>
