--- a/patient_website/public/login_signup/signPage.html
+++ b/patient_website/public/login_signup/signPage.html
@@ -40,7 +40,7 @@
 				<input name="loginPassword" type="text" placeholder="Password" required />
 
 
-				<a href="../../meinhardt-front-end/public/forgotpass.html">Forgot your password?</a>
+				<a href="../forgotpass.html">Forgot your password?</a>
 				<button name="loginPatient" type="submit">Sign In</button>
 			</form>
 		</div>
