forgot password halfway done
email sender now works properly... kisvaan please retrieve password from the database, then send password to the email

--- a/patient_website/public/login_signup/signPage.html
+++ b/patient_website/public/login_signup/signPage.html
@@ -37,7 +37,7 @@
 				<span>or use your account</span>-->
 
 				<input name="loginEmail" type="email" placeholder="Email" required />
-				<input name="loginPassword" type="text" placeholder="Password" required />
+				<input name="loginPassword" type="password" placeholder="Password" required />
 
 
 				<a href="../forgotpass.html">Forgot your password?</a>
