--- a/admin_doctor/public/loginadmin.html
+++ b/admin_doctor/public/loginadmin.html
@@ -74,10 +74,10 @@
                         </div>
 						
                         <div class="d-grid">
-                            <a href="../../meinhardt-front-end/public/homepageadmin.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
+                            <a href="./homepageadmin.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
                         </div>
 						
-						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/forgotpassadmin.html">Forgot Password </a>
+						<a class="fs-1 mb-5" href="./forgotpassadmin.html">Forgot Password </a>
                         <div class="d-grid">
                         </div>
                     </div>
