new ui features for s2

--- a/admin_doctor/public/loginadmin.html
+++ b/admin_doctor/public/loginadmin.html
@@ -45,8 +45,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                  <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/loginadmin.html">Admin Login</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/homepageadmin.html">Sign In</a>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="./logindoctor.html">Doctor Login</a></li>
+                     </ul>
                 </div>
             </div>
         </nav>
@@ -77,7 +77,7 @@
                             <a href="./homepageadmin.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
                         </div>
 						
-						<a class="fs-1 mb-5" href="./forgotpassadmin.html">Forgot Password </a>
+						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/forgotpassadmin.html">Forgot Password </a>
                         <div class="d-grid">
                         </div>
                     </div>
