--- a/patient_website/public/availabilitydatepatient.html
+++ b/patient_website/public/availabilitydatepatient.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sign In</title>
+    <title>Update Profile</title>
 
 
     <!-- ===============================================-->
@@ -41,12 +41,15 @@
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
+                <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-                 <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="./loginadmin.html">Admin Login</a></li>
-                     </ul> 
+                    <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">My Profile</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
                 </div>
             </div>
         </nav>
@@ -57,32 +60,10 @@
 
             <div class="container">
                 <div class="row min-vh-xl-100 min-vh-xxl-25">
-                    <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
-					</div>
-                    <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-
-                        <p class="fs-1 mb-5">Doctor ID: </p>
-                        <div class="col-md-6">
-                            <label class="form-label visually-hidden" for="inputEmail">Doctor Id</label>
-                            <input class="form-control form-livedoc-control" id="inputEmail" type="email" placeholder="Doctor ID" />
-                        </div>
-
-                        <p class="fs-1 mb-5">Password: </p>
-                        <div class="col-md-6">
-                            <label class="form-label visually-hidden" for="inputPass">Password</label>
-                            <input class="form-control form-livedoc-control" id="inputPass" type="pass" placeholder="Password" />
-                        </div>
-						
-                        <div class="d-grid">
-                            <a href="./homepagedoctor.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
-                        </div>
-						
-						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/forgotpassdoctor.html">Forgot Password </a>
-                        <div class="d-grid">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"></div>
+            <h1 class="fw-light font-base fs-6 fs-xxl-7">FAM HOW DO I MAKE CALENDAR IN THIS HTML SHIZ?</h1>
+          </div>
+        </div>
 			</section>
         <section class="py-0 bg-secondary">
             <div class="bg-holder opacity-25" style="background-image:url(assets/img/gallery/dot-bg.png);background-position:top left;margin-top:-3.125rem;background-size:auto;">
