--- a/admin_doctor/public/homepageadmin.html
+++ b/admin_doctor/public/homepageadmin.html
@@ -32,6 +32,17 @@
 
   </head>
 
+<style>
+
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+th, td {
+  background-color: #96D4D4;
+}
+
+</style>
 
   <body>
 
