--- a/patient_website/public/index.html
+++ b/patient_website/public/index.html
@@ -45,7 +45,7 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../patient/login_signup/signPage.html">About Us</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Departments</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="./viewlistdoctorguest">Doctors</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./login_signup/signPage.html">Sign In</a>
