--- a/patient_website/public/viewprofilepatient.html
+++ b/patient_website/public/viewprofilepatient.html
@@ -46,8 +46,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="./signupguest.html">My Profile</a></li>
+			  <li class="nav-item px-2"><a class="nav-link" href="./viewlistdoctorpatient.html">Doctor List</a></li>
+			  <li class="nav-item px-2"><a class="nav-link" href="./viewappointmenthistory.html">History</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="./appointmentbookpatient.html">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
 			  
