update patient profile is now halfway done

--- a/patient_website/public/viewprofilepatient.html
+++ b/patient_website/public/viewprofilepatient.html
@@ -74,7 +74,7 @@
 				<br> Date Of Birth: xx September 20xx (23 years-old)</p>
 				
               <div class="d-grid">
-                  <a href="../../meinhardt-front-end/public/updateprofilepatient.html"><button class="btn btn-primary rounded-pill" type="submit">Update Profile</button></a>
+                  <a href="../../meinhardt-front-end/public/updateprofilepatient.php"><button class="btn btn-primary rounded-pill" type="submit">Update Profile</button></a>
               </div>
             </div>
           </div>
