--- a/admin_doctor/public/homepageadmin.html
+++ b/admin_doctor/public/homepageadmin.html
@@ -76,7 +76,8 @@ th, td {
               <h1 class="fw-light font-base fs-6 fs-xxl-7">Hello <strong> Name </strong>
               <p class="fs-1 mb-5">How are you doing today? <br />Please refer to (supposed task for admin) in (any directed page/scroll).</p>
 				  
-				  
+              <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Assign Doctor</a>
+              <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">View List of Doctors</a>
             </div>
           </div>
         </div>
