Log in (still Error)

--- a/admin_doctor/public/logindoctor.html
+++ b/admin_doctor/public/logindoctor.html
@@ -64,17 +64,17 @@
                         <p class="fs-1 mb-5">Doctor ID: </p>
                         <div class="col-md-6">
                             <label class="form-label visually-hidden" for="inputEmail">Doctor Id</label>
-                            <input class="form-control form-livedoc-control" id="inputEmail" type="email" placeholder="Doctor ID" />
+                            <input class="form-control form-livedoc-control" id="inputEmail" name ="SignInDoctorId" type="email" placeholder="Doctor ID" />
                         </div>
 
                         <p class="fs-1 mb-5">Password: </p>
                         <div class="col-md-6">
                             <label class="form-label visually-hidden" for="inputPass">Password</label>
-                            <input class="form-control form-livedoc-control" id="inputPass" type="pass" placeholder="Password" />
+                            <input class="form-control form-livedoc-control" id="inputPass" name ="SignInDoctorPassword" type="password" placeholder="Password" />
                         </div>
 						
                         <div class="d-grid">
-                            <a href="./homepagedoctor.html"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
+                            <a href="./homepagedoctor.html"> <button class="btn btn-primary rounded-pill" name="SignInButton" type="submit">Sign In</button> </a>
                         </div>
 						
 						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/forgotpassdoctor.html">Forgot Password </a>
