--- a/admin_doctor/public/homepagedoctor.html
+++ b/admin_doctor/public/homepagedoctor.html
@@ -78,7 +78,7 @@ th, td {
 				  
 				  <table>
 					<tr>
-						<th>Name</th>
+						<th>Patient's Name</th>
 						<th>Date</th>
 						<th>Time</th>
 				  </tr>
