--- a/admin_doctor/public/login_signup/signPage.html
+++ b/admin_doctor/public/login_signup/signPage.html
@@ -18,11 +18,12 @@
 				</div>
 				<span>or use your email for registration</span>-->
 
-				<input type="text" name="patientName" placeholder="Username"  required />
+				<input type="text" name="patientName" placeholder="Name"  required />
+				<input type="email" name="patientEmail" placeholder="Email" required />
+
+
 				<input type="password" name="patientPassword" placeholder="Password" />
-				
-				
-				<button name="loginDoctor" type="submit">Sign Up</button>
+				<button name="registerPatient" type="submit">Sign Up</button>
 			</form>
 		</div>
 		<div class="form-container sign-in-container">
