--- a/admin_doctor/public/loginadmin.html
+++ b/admin_doctor/public/loginadmin.html
@@ -59,6 +59,7 @@
                 <div class="row min-vh-xl-100 min-vh-xxl-25">
                     <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
 					</div>
+					<form method="post" action="./login_signup/processAdmin.php">
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
                         <p class="fs-1 mb-5">Admin ID: </p>
@@ -81,6 +82,7 @@
                         <div class="d-grid">
                         </div>
                     </div>
+					</form>
                 </div>
             </div>
 			</section>
