--- a/admin_doctor/public/logoutadmin.html
+++ b/admin_doctor/public/logoutadmin.html
@@ -62,7 +62,7 @@
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
                         <p class="fs-1 mb-5">You have successfully signed out. </p>
-						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/loginadmin.html">Click here to go proceed to login. </a>
+						<a class="fs-1 mb-5" href="./loginadmin.html">Click here to go proceed to login. </a>
                         <div class="d-grid">
                         </div>
                     </div>
