--- a/patient_website/public/logoutpatients.html
+++ b/patient_website/public/logoutpatients.html
@@ -66,7 +66,7 @@
                     <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
 
                         <p class="fs-1 mb-5">You have successfully signed out. </p>
-						<a class="fs-1 mb-5" href="./index.html">Click here to go proceed to the homepage. </a>
+						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/index.html">Click here to go proceed to the homepage. </a>
                         <div class="d-grid">
                         </div>
                     </div>
