--- a/admin_doctor/public/altereventadmin.html
+++ b/admin_doctor/public/altereventadmin.html
@@ -74,11 +74,33 @@ th, td {
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
 			  </div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <h1 class="fw-light font-base fs-6 fs-xxl-7">Hello <strong> Name </strong>
-              <p class="fs-1 mb-5">How are you doing today? <br />Please refer to (supposed task for admin) in (any directed page/scroll).</p>
+			<h1 class="fw-light font-base fs-6 fs-xxl-7">Alter events here</h1>
+              <table style="width:50%">
+					<tr>
+						<th>Event</th>
+						<th>Date</th>
+						<th>Time</th>
+						<th>Update</th>
+						<th>Delete</th>
+				  </tr>
+				  <tr>
+						<td>Blood something give idk the words</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
+						<th> <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Update</a> </th>
+						<th> <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Delete</a> </th>
+				  </tr>
+				  <tr>
+						<td>run away for fun</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
+						<th> <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Update</a> </th>
+						<th> <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Delete</a> </th>
+				  </tr>
+				</table>
 				  
-              <a class="btn btn-lg btn-primary rounded-pill" href="./doctor/assignDoctor.html" role="button">Assign Doctor</a>
-              <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">View List of Doctors</a>
+              <a class="btn btn-lg btn-primary rounded-pill" href="./doctor/assignDoctor.html" role="button">Add Event</a>
+              <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Save</a>
             </div>
           </div>
         </div>
