--- a/admin_doctor/public/viewappointmentdetailsadmin.html
+++ b/admin_doctor/public/viewappointmentdetailsadmin.html
@@ -79,14 +79,20 @@ th, td {
 					<tr>
 						<th>Name</th>
 						<th>Contact</th>
+						<th>Date</th>
+						<th>Time</th>
 				  </tr>
 				  <tr>
 						<td>Minu Yoon</td>
 						<td>213-xxx-xx</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
 				  </tr>
 				  <tr>
 						<td>Put Any Name</td>
 						<td>213-xxx-xx</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
 				  </tr>
 				</table>
             </div>
