--- a/admin_doctor/public/viewlistpatientdoc.html
+++ b/admin_doctor/public/viewlistpatientdoc.html
@@ -73,22 +73,24 @@ th, td {
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
 			  </div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <h1 class="fw-light font-base fs-6 fs-xxl-7">Hello <strong> Dr. Piri </strong>
-              <p class="fs-1 mb-5">How are you doing today? <br />You can refer to your appointment schedule for today.</p>
+              <h1 class="fw-light font-base fs-6 fs-xxl-7">Patient Viewlist</h1>
 				  
-				  <table>
+				  <table style="width:50%">
 					<tr>
-						<th>Patient's Name</th>
+						<th>Name</th>
+						<th>Contact</th>
 						<th>Date</th>
 						<th>Time</th>
 				  </tr>
 				  <tr>
 						<td>Minu Yoon</td>
+						<td>213-xxx-xx</td>
 						<td>23 Feb</td>
 						<td>07.30AM</td>
 				  </tr>
 				  <tr>
-						<td>Minu Yoon</td>
+						<td>Put Any Name</td>
+						<td>213-xxx-xx</td>
 						<td>23 Feb</td>
 						<td>07.30AM</td>
 				  </tr>
