--- a/admin_doctor/public/viewpaymenthistoadmin.html
+++ b/admin_doctor/public/viewpaymenthistoadmin.html
@@ -74,11 +74,26 @@ th, td {
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
 			  </div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <h1 class="fw-light font-base fs-6 fs-xxl-7">Hello <strong> Name </strong>
-              <p class="fs-1 mb-5">How are you doing today? <br />Please refer to (supposed task for admin) in (any directed page/scroll).</p>
+			<h1 class="fw-light font-base fs-6 fs-xxl-7">Appointment History</h1>
+              <table>
+					<tr>
+						<th>Patient's Name</th>
+						<th>Date</th>
+						<th>Time</th>
+				  </tr>
+				  <tr>
+						<td>lalalallala</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
+				  </tr>
+				  <tr>
+						<td>run away for fun</td>
+						<td>23 Feb</td>
+						<td>07.30AM</td>
+				  </tr>
+				</table>
 				  
-              <a class="btn btn-lg btn-primary rounded-pill" href="./doctor/assignDoctor.html" role="button">Assign Doctor</a>
-              <a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">View List of Doctors</a>
+              <a class="btn btn-lg btn-primary rounded-pill" href="./doctor/assignDoctor.html" role="button">Print Sales Report</a>
             </div>
           </div>
         </div>
