--- a/patient_website/public/contactuspatient.html
+++ b/patient_website/public/contactuspatient.html
@@ -66,7 +66,8 @@
                     <div class="row min-vh-xl-100 min-vh-xxl-25">
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <p class="fs-1 mb-5">Established in 2008, Meinhardt Hospital is the flagship hospital of TMC Life Sciences with a wide array of specialties. Located in a prime alcove of Hamburg, Meinhardt is well linked to Winterhude via HVV Underground Trains. With the new train station in Eppendorf located just beside our hospital, it will be easier to reach us. We are in close proximity to established neighbourhoods, such as Hamburg-Nord, Barmbek-Süd, Eimsbüttel, Wandsbek and Uhlenhorst. </p>
+              <p class="fs-1 mb-5">Our branch is open 24/7 from Monday to Sunday <br><br> For any questions you may have, consultation, appointment or more, kindly contact us on:
+				<br><br> Call Center: +254 xxx xxx xxx <br> Email Address: meinhardt.hospital@gmail.com</p>
             </div>
           </div>
                     </div>
