--- a/patient_website/public/faqpatient.html
+++ b/patient_website/public/faqpatient.html
@@ -64,7 +64,7 @@
                 <div class="row min-vh-xl-100 min-vh-xxl-25">
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <p class="fs-1 mb-5">Established in 2008, Meinhardt Hospital is the flagship hospital of TMC Life Sciences with a wide array of specialties. Located in a prime alcove of Hamburg, Meinhardt is well linked to Winterhude via HVV Underground Trains. With the new train station in Eppendorf located just beside our hospital, it will be easier to reach us. We are in close proximity to established neighbourhoods, such as Hamburg-Nord, Barmbek-Süd, Eimsbüttel, Wandsbek and Uhlenhorst. </p>
+              <p class="fs-1 mb-5">Q: idk bruh put a q here <br> A: lalalalalalala <br><br> Q: ??????? <br> A: LMAO </p>
             </div>
           </div>
         </div>
