--- a/admin_doctor/public/contactusdoctor.html
+++ b/admin_doctor/public/contactusdoctor.html
@@ -57,10 +57,9 @@ th, td {
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="../../meinhardt-front-end/public/viewprofilepatient.html">My Profile</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#departments">Appointments</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="./doctor/doctorListAdmin.php">Doctors List</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutadmin.html">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutdoctor.html">Sign Out</a>
           </div>
         </div>
       </nav>
@@ -71,30 +70,12 @@ th, td {
 
         <div class="container">
           <div class="row min-vh-xl-100 min-vh-xxl-25">
-            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
-			  </div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-			<h1 class="fw-light font-base fs-6 fs-xxl-7">Appointment History</h1>
-              <table style="width:50%">
-					<tr>
-						<th>Patient's Name</th>
-						<th>Date</th>
-						<th>Time</th>
-				  </tr>
-				  <tr>
-						<td>lalalallala</td>
-						<td>23 Feb</td>
-						<td>07.30AM</td>
-				  </tr>
-				  <tr>
-						<td>run away for fun</td>
-						<td>23 Feb</td>
-						<td>07.30AM</td>
-				  </tr>
-				</table>
-				  
-              <a class="btn btn-lg btn-primary rounded-pill" href="./doctor/assignDoctor.html" role="button">Print Sales Report</a>
+              <p class="fs-1 mb-5">Our branch is open 24/7 from Monday to Sunday <br><br> For any questions you may have, consultation, appointment or more, kindly contact us on:
+				<br><br> Call Center: +254 xxx xxx xxx <br> Email Address: meinhardt.hospital@gmail.com</p>
             </div>
+          </div>
           </div>
         </div>
       </section>
