finish front-end
give feedback for admin job through the email.

--- a/patient_website/public/viewpaymenthistory.html
+++ b/patient_website/public/viewpaymenthistory.html
@@ -76,7 +76,7 @@ th, td {
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end">
 			  </div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <p class="fs-1 mb-5">Your Appointment History </p>
+              <p class="fs-1 mb-5">Your Payment History </p>
 				
 				<table style="width:50%">
 					<tr>
