--- a/admin_doctor/public/logindoctor.html
+++ b/admin_doctor/public/logindoctor.html
@@ -75,7 +75,7 @@
                         </div>
 						
                         <div class="d-grid">
-                            <a href="./homepagedoctor.php"> <button class="btn btn-primary rounded-pill" type="submit">Sign In</button> </a>
+                            <button class="btn btn-primary rounded-pill" type="submit">Sign In</button>
                         </div>
 						
 						<a class="fs-1 mb-5" href="../../meinhardt-front-end/public/forgotpassdoctor.html">Forgot Password </a>
